# dotfiles

./: .chezmoi.yaml.tmpl  .chezmoiignore  .gitignore  .gitmodules  AGENTS.md  README.md  install.sh  prerequisites.sh  run_once_before_decrypt-private-key.sh.tmpl
X/: profile  resources
bat/: config
cascadeur/: dot_gitmodules.tmpl
dot_config/bat/: config
dot_config/btop/: btop.conf
dot_config/fastfetch/: config.jsonc
dot_config/kitty/: kitty.conf
dot_config/ncspot/: config.toml
dot_config/private_fcitx5/conf/: classicui.conf
font/: 10-nerd-font.conf  60-latin.conf  65-nonlatin.conf  69-replace-monospace.conf
git/: config
gtk/2/: gtkrc-2.0
gtk/3/: settings.ini
home/: .chezmoi.yaml.tmpl  .chezmoiignore.tmpl  executable_dot_niri_init.fish  executable_dot_wayland_init.fish.tmpl  private_dot_netrc.tmpl
home/.chezmoidata/: catppuccin.yaml  companies.yaml
home/.chezmoiexternals/: assets.yaml  assets.yaml.tmpl  catppuccin.yaml  catppuccin.yaml.tmpl  fonts.yaml  fonts.yaml.tmpl  misc.yaml.tmpl  moz.yaml.tmpl  mpv.yaml  mpv.yaml.tmpl  rose-pine.yaml.tmpl
home/.chezmoiscripts/: run_before_03-decrypt-private-key.sh.tmpl  run_once_after_02-install-python-env.sh.tmpl  run_once_after_03-setup-bat.sh.tmpl  run_once_after_03-setup-tridactyl.sh.tmpl  run_once_after_04-setup-firefox-ea.sh.tmpl  run_once_after_04-setup-macos.sh.tmpl  run_once_after_04-setup-ytproxy.sh.tmpl  run_once_before_01-update-submodules.sh.tmpl  run_onchange_after_02-install-tools.sh.tmpl  run_onchange_after_03-setup-hyprland.sh.tmpl  run_onchange_after_03-setup-nvim.sh.tmpl
home/.chezmoiscripts/darwin/: run_once_before_01-configure-defaults.sh  run_once_before_01-configure-defaults.sh.tmpl  run_once_before_01-install-extra-packages.sh.tmpl  run_once_before_02-configure-dock.sh  run_once_before_02-configure-dock.sh.tmpl
home/.chezmoitemplates/css/: catppuccin.css.tmpl
home/.chezmoitemplates/docker/: config.yaml.tmpl
home/.chezmoitemplates/firefox/: user.js
home/.chezmoitemplates/gh/: hosts.yaml.tmpl
home/.chezmoitemplates/git/: enterprise.config.tmpl  enterprise_allowed_signers.tmpl
home/.chezmoitemplates/glab-cli/: config.yml.tmpl
home/.chezmoitemplates/jira/: config.yaml.tmpl
home/.chezmoitemplates/k9s/: config.yaml
home/.chezmoitemplates/lazygit/: config.yml  config.yml.tmpl
home/.chezmoitemplates/mc/: config.json.tmpl
home/.chezmoitemplates/mise/: env_git.toml.tmpl  env_glab.toml.tmpl  env_jira.toml.tmpl
home/.chezmoitemplates/pkgs/: tools.yaml.tmpl
home/.chezmoitemplates/rbw/: config.json.tmpl
home/.chezmoitemplates/ssh/: authorized_keys.tmpl  hosts.config.tmpl  service.yaml.tmpl
home/.chezmoitemplates/thunderbird/: user.js
home/.chezmoitemplates/wm/: hypridle.conf
home/.chezmoitemplates/zen/: user.js
home/Working/: encrypted_dot_gitconfig.age
home/Working/TopCV/: dot_mise.toml.tmpl
home/dot_config/: encrypted_fish-ai.ini.age  starship.toml  update_browser_profiles.sh.tmpl
home/dot_config/btop/: btop.conf  btop.conf.tmpl
home/dot_config/cava/: config.tmpl  waybar_config.tmpl
home/dot_config/elephant/: bitwarden.toml  websearch.toml
home/dot_config/fastfetch/: config.jsonc
home/dot_config/fish/: art  config.fish  config.fish.tmpl  encrypted_secret.fish.age  executable_setup.fish  plugins.list
home/dot_config/gh/: encrypted_private_hosts.yml.age  private_config.yml  private_config.yml.tmpl  private_hosts.yml.tmpl
home/dot_config/git/: config  config.tmpl  diff-filter  ignore
home/dot_config/glab-cli/: private_config.yml.tmpl
home/dot_config/glow/: glow.yml.tmpl
home/dot_config/gtk-3.0/: settings.ini
home/dot_config/gtk-4.0/: settings.ini  settings.ini.tmpl
home/dot_config/hypr/: hypridle.conf.tmpl  hyprland.conf  hyprlock.conf  hyprpaper.conf.tmpl  sunsetr.toml  sunsetr.toml.tmpl
home/dot_config/k9s/: aliases.yaml.tmpl  config.yaml.tmpl
home/dot_config/karabiner/: karabiner.json
home/dot_config/kitty/: font.conf  kitty.conf  kitty.conf.tmpl  mac.conf  tab_bar.py
home/dot_config/lazygit/: config.yml.tmpl
home/dot_config/pkg_installer/: binary_installer.py  binary_installer.py.tmpl  executable_binary_installer.py  executable_main.py  executable_os_installer.py  executable_shell_installer.py  logger.py  main.py.tmpl  os_info.yaml.tmpl  os_installer.py  os_installer.py.tmpl  pyproject.toml  shell_installer.py.tmpl  tools.yaml.tmpl  utils.py  utils.py.tmpl
home/dot_config/pkg_installer/tests/: test_os_installer.py
home/dot_hammerspoon/: init.lua.tmpl
home/dot_homebrew/: empty_brew.env
home/dot_scripts/: executable_powermenu.sh.tmpl  executable_waybar.sh  executable_wayland_init.fish.tmpl
home/dot_zen/: profiles.ini.tmpl
home/private_dot_docker/: encrypted_private_config.json.age  private_config.json.tmpl
home/private_dot_macos/: com.apple.CrashReporter.yaml  com.apple.LaunchServices.yaml  com.apple.NetworkBrowser.yaml  com.apple.dashboard.yaml  com.apple.dock.yaml  com.apple.helpviewer.yaml  com.raycast.macos.yaml  global.yaml
home/private_dot_mc/: private_config.json.tmpl
home/private_dot_ssh/: authorized_keys  authorized_keys.tmpl  create_config  encrypted_allowed_signers.age
home/private_dot_thunderbird/: profiles.ini.tmpl
kitty/: kitty.conf
lsd/: config.yaml
lsd/themes/: custom.yaml
modules/: firefox-profiles-personal  firefox-profiles-work  mpv  nvim  thunderbird-profiles-personal  thunderbird-profiles-work  zen-profiles-personal  zen-profiles-work
mopidy/: mopidy.conf
ncmpcpp/: config
ncspot/: config.toml
picom/: picom.conf
redshift/: redshift.conf
rofi/: config.rasi  theme-common.rasi
root/: .chezmoiexternal.yaml  .chezmoiexternal.yaml.tmpl  .chezmoiignore.tmpl
root/.chezmoiscripts/: run_once_after_01-setup-pam.sh.tmpl  run_onchange_after_01-make-grub-config.sh.tmpl
root/etc/: locale.gen  makepkg.conf  pacman.conf  symlink_localtime
scripts/: migrate_post_quantum.sh
secrets/: enterprise_TCV.age  key.age  personal.age
secrets/recipients/: enterprise_TCV.txt  personal.txt
tmux/: config
zsh/: aliases  aliases.zsh  export  export.zsh  p10k.zsh  zshrc
(+457 files in other folders)
